    hclust package.

Version 1.1.15, 01/05/2015

  • Fixed the unit test to work with old and new R versions (see the changes
    in stats::hclust in R 3.1.0).

Version 1.1.16, 01/07/2015

  • Support for large distance matrices (more than 2^31 entries, R's long
    vector support since version 3.0.0).

Version 1.1.17, 07/03/2015

  • Resolved MSVC compiler warnings.

Version 1.1.18, 07/16/2015

  • Fixed missing NumPy header include path.

Version 1.1.19, 07/19/2015

  • Fixed unit tests. They can be run with "python setup.py test" now.

Version 1.1.20, 07/19/2015

  • New version number due to PyPI upload error.

Version 1.1.21, 09/18/2016

  • Appropiate use of std namespace, as required by CRAN.

Version 1.1.22, 06/12/2016

  • No fenv header usage if software floating-point emulation is used (bug
    report: NaN test failed on Debian armel).

Version 1.1.23, 03/24/2017

  • setup.py: Late NumPy import for better dependency management.

Version 1.1.24, 08/04/2017

 • R 3.5 corrects the formula for the “Canberra” metric. See
   https://bugs.r-project.org/bugzilla/show_bug.cgi?id=17285.
   The formula in the fastcluster package was changed accordingly. This
   concerns only the R interface. SciPy and fastcluster's Python interface
   always had the correct formula.

Version 1.1.25, 05/27/2018

 • Removed all “#pragma GCC diagnostic” directives in .cpp files due to changed
   CRAN requirements (CRAN repository only, not the GitHub repository).
 • Updated build scripts for Python 3.7 (thanks to Forest Gregg).
 • Simplified setup.py.
 • Updated and corrected documentation.

Version 1.1.26, 12/30/2019

• Small updates for Python 3.8.

Version 1.1.27, 01/20/2021

• Updated NumPy dependency for Python 3.9.

Version 1.1.28, 02/03/2021

• Replace deprecated “numpy.bool” and “numpy.int” by “bool” and “int”.

Version 1.2.0, 05/23/2021

• Python interface: Updated definition of the Yule distance function, following
  a change in SciPy 1.6.3.