@@ -7,18 +7,6 @@ environment:
     # a later point release.
     # See: http://www.appveyor.com/docs/installed-software#python
 
-    - PYTHON_VERSION: "2.7"
-      MINICONDA: "C:\\Miniconda"
-
-    - PYTHON_VERSION: "2.7"
-      MINICONDA: "C:\\Miniconda-x64"
-
-    - PYTHON_VERSION: "3.6"
-      MINICONDA: "C:\\Miniconda36"
-
-    - PYTHON_VERSION: "3.6"
-      MINICONDA: "C:\\Miniconda36-x64"
-
     - PYTHON_VERSION: "3.7"
       MINICONDA: "C:\\Miniconda37"
 
