@@ -221,5 +221,6 @@ Version 1.1.28, 02/03/2021
 
 Version 1.2.0, 05/23/2021
 
+• Dropped support for Python 2.
 • Python interface: Updated definition of the Yule distance function, following
   a change in SciPy 1.6.3.
